--- a/BusinessLogic/pom.xml
+++ b/BusinessLogic/pom.xml
@@ -26,4 +26,12 @@
             </plugin>
         </plugins>
     </build>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.gft</groupId>
+            <artifactId>DataAccessLayer</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
