--- a/DataAccessLayer/pom.xml
+++ b/DataAccessLayer/pom.xml
@@ -34,6 +34,13 @@
             <version>${project.slf4j.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
