--- a/Frontend/src/main/webapp/WEB-INF/web.xml
+++ b/Frontend/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,6 @@
 
     <servlet-mapping>
         <servlet-name>UserListServlet</servlet-name>
-        <url-pattern>/UserList</url-pattern>
+        <url-pattern>/client</url-pattern>
     </servlet-mapping>
 </web-app>
