--- a/BusinessLogic/pom.xml
+++ b/BusinessLogic/pom.xml
@@ -33,5 +33,10 @@
             <artifactId>DataAccessLayer</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${project.slf4j.version}</version>
+        </dependency>
     </dependencies>
 </project>
