--- a/Frontend/src/main/webapp/WEB-INF/web.xml
+++ b/Frontend/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,18 @@
         <servlet-class>com.gft.banking.frontend.UserListServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <servlet-class>com.gft.banking.frontend.UserLoginServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>UserListServlet</servlet-name>
         <url-pattern>/client</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>UserLoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
     </servlet-mapping>
 </web-app>
