Create user NOT TESTED

--- a/Frontend/src/main/webapp/WEB-INF/web.xml
+++ b/Frontend/src/main/webapp/WEB-INF/web.xml
@@ -12,6 +12,11 @@
         <servlet-name>UserLoginServlet</servlet-name>
         <servlet-class>com.gft.banking.frontend.UserLoginServlet</servlet-class>
     </servlet>
+    
+    <servlet>
+        <servlet-name>CreateUserServlet</servlet-name>
+        <servlet-class>com.gft.banking.frontend.CreateUserServlet</servlet-class>
+    </servlet>
 
     <servlet-mapping>
         <servlet-name>UserListServlet</servlet-name>
@@ -21,5 +26,10 @@
     <servlet-mapping>
         <servlet-name>UserLoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+        <servlet-name>CreateUserServlet</servlet-name>
+        <url-pattern>/create</url-pattern>
     </servlet-mapping>
 </web-app>
